# NPAP

./: .codespellignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  environment.yml  interfaces.py  managers.py  pyproject.toml  setup.py  utils.py  visualization.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
aggregation/: __init__.py  basic_strategies.py  modes.py  physical_strategies.py
docs/: contributing.md
docs/api/: aggregation.rst  exceptions.rst  index.rst  interfaces.rst  managers.rst  partitioning.rst  visualization.rst
docs/contributing/: code-of-conduct.md  development-workflow.md  extending-npap.md  getting-started.md  pull-requests.md  reporting-issues.md
docs/user-guide/: aggregation.md  available-strategies.md  data-loading.md  extending.md  index.md  installation.md  partitioning.md  quick-start.md  visualization.md  workflows.md
docs/user-guide/partitioning/: electrical.md  geographical.md  index.md  va-electrical.md  va-geographical.md
input/: csv_loader.py  networkx_loader.py  va_loader.py
npap/: __init__.py  cli.py  exceptions.py  interfaces.py  managers.py  utils.py  visualization.py
npap/aggregation/: __init__.py  basic_strategies.py  modes.py  physical_strategies.py
npap/input/: __init__.py  csv_loader.py  networkx_loader.py  va_loader.py
npap/partitioning/: __init__.py  adjacent.py  electrical.py  geographical.py  graph_theory.py  lmp.py  va_electrical.py  va_geographical.py
partitioning/: electrical.py  geographical.py  va_geographical.py
scripts/: lmp_conservation_workflow.py
test/: conftest.py  test_aggregation.py  test_cli_entries.py  test_cli_helpers.py  test_input.py  test_managers_physical_params.py  test_partitioning.py  test_partitioning_additional.py  test_physical_strategies.py  test_property_partitioning.py  test_utils.py  test_visualization.py  test_visualization_helpers.py
