[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "npap"
dynamic = ["version"]
description = "Network Partitioning & Aggregation Package"
readme = "README.md"
authors = [
    { name = "Marco Antonio Arnaiz Montero" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.11"

dependencies = [
    "hdbscan>=0.8.41",
    "kmedoids>=0.5.4",
    "networkx>=3.6.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
]

[tool.setuptools.packages.find]
include = ["npap"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov", # Optional: good for future coverage reports
]
dev = [
    "black", # formatting
    "ruff", # linting
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"