# SPDX-FileCopyrightText: Contributors to NPAP
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "npap"
dynamic = ["version"]
description = "Network Partitioning & Aggregation Package"
readme = "README.md"
authors = [{ name = "Marco Anarmo" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
keywords = ["network", "partitioning", "aggregation", "power-systems", "clustering"]

requires-python = ">=3.10"

dependencies = [
    "hdbscan>=0.8.41",
    "kmedoids>=0.5.4",
    "networkx>=3.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "plotly>=5.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
]

[project.urls]
Homepage = "https://npap.readthedocs.io"
Documentation = "https://npap.readthedocs.io"
Repository = "https://github.com/IEE-TUGraz/NPAP"
Changelog = "https://github.com/IEE-TUGraz/NPAP/releases"

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov>=4.0", "hypothesis>=6.0,<7.0"]
dev = ["pre-commit>=3.0", "ruff>=0.8.0"]
docs = [
    "sphinx>=7.0",
    "pydata-sphinx-theme==0.15.4",
    "sphinx-design>=0.5.0",
    "myst-parser>=2.0",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-copybutton>=0.5",
    "numpydoc>=1.6",
    "sphinxcontrib-mermaid>=0.9",
    "sphinx-reredirects>=0.1",
]

[project.scripts]
npap-cluster = "npap.cli:cluster_entry"
npap-aggregate = "npap.cli:aggregate_entry"
npap-plot = "npap.cli:plot_entry"
npap-diag = "npap.cli:diagnose_entry"

[tool.setuptools.packages.find]
include = ["npap", "npap.*"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

# =============================================================================
# Ruff Configuration
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort
    "D",     # pydocstyle
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "PL",    # pylint
    "RUF",   # Ruff-specific rules
]
ignore = [
    "D100",  # Missing docstring in public module
    "D102",  # Missing docstring in public method
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "D200",  # One-line docstring should fit on one line
    "D203",  # 1 blank line required before class docstring (conflicts with D211)
    "D205",  # 1 blank line required between summary line and description
    "D213",  # Multi-line docstring summary should start at the second line (conflicts with D212)
    "D400",  # First line should end with a period
    "D401",  # First line should be in imperative mood
    "E501",  # Line too long (handled by formatter)
    "B007",  # Loop control variable not used within loop body
    "C408",  # Unnecessary dict() call - common in Plotly code for readability
    "PLC0415",  # Import should be at top-level (lazy imports are intentional)
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments in function definition
    "PLR0915",  # Too many statements
    "PLR1714",  # Consider merging multiple comparisons
    "PLR2004",  # Magic value used in comparison
    "RUF002",  # Ambiguous characters (multiplication sign × is intentional)
    "RUF012",  # Mutable class attributes should be annotated with ClassVar
    "RUF013",  # PEP 484 prohibits implicit Optional
    "RUF046",  # Value being cast is already the target type
]

[tool.ruff.lint.per-file-ignores]
"test/*" = ["D", "PLR0915", "PLR0912", "PLC0415", "RUF043"]
"tests/*" = ["D", "PLR0915", "PLR0912", "PLC0415", "RUF043"]
"local_tests.py" = ["D", "E501", "I001"]
"docs/conf.py" = ["D", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["npap"]

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["test"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["npap"]
branch = true
omit = ["npap/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
precision = 2

# =============================================================================
# Codespell Configuration
# =============================================================================
[tool.codespell]
skip = "*.lock,*.svg,.git"
ignore-words-list = "crate"
